--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/content_main" />
+        layout="@layout/resturant_items" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -28,15 +28,15 @@
         android:layout_marginBottom="16dp"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
-    <Button
-        android:id="@+id/mybutton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:onClick="onClick"
-        android:text="Submit"
-        tools:ignore="OnClick">
+<!--    <Button-->
+<!--        android:id="@+id/mybutton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="48dp"-->
+<!--        android:onClick="onClick"-->
+<!--        android:text="Submit"-->
+<!--        tools:ignore="OnClick">-->
 
-    </Button>
+<!--    </Button>-->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
