--- a/app/src/main/res/layout/resturant_items.xml
+++ b/app/src/main/res/layout/resturant_items.xml
@@ -12,7 +12,6 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="28dp"
         android:fontFamily="sans-serif-black"
-        android:text="TextView"
         android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.0"
@@ -23,18 +22,21 @@
         android:id="@+id/id_txt"
         android:layout_width="103dp"
         android:layout_height="26dp"
-        android:text="TextView"
+        android:layout_marginTop="18dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/name_txt"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/name_txt"
-        tools:layout_editor_absoluteY="83dp" />
+        app:layout_constraintTop_toBottomOf="@+id/name_txt" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="267dp"
-        tools:layout_editor_absoluteY="16dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ImageContrastCheck"
         tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
