--- a/app/src/main/res/layout/resturant_item.xml
+++ b/app/src/main/res/layout/resturant_item.xml
@@ -20,12 +20,12 @@
         android:id="@+id/name_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="84dp"
         android:fontFamily="sans-serif-black"
         android:text="TextView"
         android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/id_txt"
+        app:layout_constraintEnd_toStartOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/id_txt"
@@ -33,7 +33,8 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name_txt"
-        app:layout_constraintStart_toStartOf="@+id/name_txt"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintStart_toStartOf="@+id/name_txt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
