--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,21 @@
     android:id="@+id/contentView"
     android:layout_width="409dp"
     android:layout_height="729dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!--    <Button-->
-    <!--        android:id="@+id/mybutton"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="48dp"-->
-    <!--        android:onClick="onClick"-->
-    <!--        android:text="Submit"-->
-    <!--        tools:ignore="OnClick">-->
-
-    <!--    </Button>-->
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_view_bg"
+        android:layout_margin="8dp"
+        android:queryHint="Search Here ..."
+        android:iconifiedByDefault="false"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="409dp"
-        android:layout_height="729dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
