--- a/app/src/main/res/layout/resturant_item.xml
+++ b/app/src/main/res/layout/resturant_item.xml
@@ -7,10 +7,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="96dp"
-        android:layout_height="91dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="36dp"
+        android:layout_width="121dp"
+        android:layout_height="115dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="28dp"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,23 +21,31 @@
         android:id="@+id/name_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="12dp"
-        android:fontFamily="sans-serif-black"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="4dp"
+        android:fontFamily="@font/open_sans"
         android:text="TextView"
-        android:textSize="30sp"
+        android:textSize="26sp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toTopOf="@+id/id_txt"
-        app:layout_constraintEnd_toStartOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.6" />
 
     <TextView
         android:id="@+id/id_txt"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="144dp"
+        android:fontFamily="@font/open_sans"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name_txt"
-        app:layout_constraintHorizontal_bias="0.574"
-        app:layout_constraintStart_toStartOf="@+id/name_txt" />
+        app:layout_constraintStart_toStartOf="@+id/name_txt"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintHorizontal_bias="1"
+        android:layout_width="wrap_content"
+        app:layout_constraintWidth_percent="0.6"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
